--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -74,9 +74,12 @@ canvas {
   /* ===== COLORS ===== */
   --color-text-primary: #222222;
   --color-text-secondary: #555555;
+  --color-text-white: #ffffff;
+
   --color-background-primary: #ffffff;
   --color-background-secondary: #eeeeee;
   --color-background-dark: #1f1f24;
+
   --color-border: #e5e5e5;
   --color-accent: #e88a24;
 
